--- a/starter/src/App.css
+++ b/starter/src/App.css
@@ -175,3 +175,14 @@ body,
   text-align: center;
   font-size: 0.8em;
 }
+
+
+/* notfound page */
+.notfound-page{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-right: -50%;
+  transform: translate(-50%, -50%);
+  color: #999;
+}
